--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -15,7 +15,25 @@
   year={2024},
   publisher={Frontiers Media SA}
 }
-
+@article{vlemincx2023novel,
+  title={A novel self-report scale of interoception: the three-domain interoceptive sensations questionnaire (THISQ)},
+  author={Vlemincx, Elke and Walentynowicz, Marta and Zamariola, Giorgia and Van Oudenhove, Lukas and Luminet, Olivier},
+  journal={Psychology \& Health},
+  volume={38},
+  number={9},
+  pages={1234--1253},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+@article{costello2005best,
+  title={Best practices in exploratory factor analysis: Four recommendations for getting the most from your analysis},
+  author={Costello, Anna B and Osborne, Jason},
+  journal={Practical assessment, research, and evaluation},
+  volume={10},
+  number={1},
+  year={2005},
+  publisher={University of Massachusetts Amherst Libraries}
+}
 @article{cosemans2022exploratory,
   title={Exploratory graph analysis for factor retention: Simulation results for continuous and binary data},
   author={Cosemans, Tim and Rosseel, Yves and Gelper, Sarah},
@@ -684,41 +702,6 @@
   pages={15--34},
   year={1983},
   publisher={Wiley Online Library}
-}
-
-@article{ludecke2021performance,
-  title={performance: An R package for assessment, comparison and testing of statistical models},
-  author={L{\"u}decke, Daniel and Ben-Shachar, Mattan S and Patil, Indrajeet and Waggoner, Philip and Makowski, Dominique},
-  journal={Journal of open source software},
-  volume={6},
-  number={60},
-  year={2021}
-}
-
-@article{merritt2022experimental,
-  title={An experimental study of dimension reduction methods on machine learning algorithms with applications to psychometrics},
-  author={Merritt, Sean H and Christensen, Alexander P},
-  journal={arXiv preprint arXiv:2210.13230},
-  year={2022}
-}
-
-@article{cosemans2022exploratory,
-  title={Exploratory graph analysis for factor retention: Simulation results for continuous and binary data},
-  author={Cosemans, Tim and Rosseel, Yves and Gelper, Sarah},
-  journal={Educational and Psychological Measurement},
-  volume={82},
-  number={5},
-  pages={880--910},
-  year={2022},
-  publisher={Sage Publications Sage CA: Los Angeles, CA}
-}
-
-@article{jimenez2023dimensionality,
-  title={Dimensionality assessment in bifactor structures with multiple general factors: A network psychometrics approach.},
-  author={Jim{\'e}nez, Marcos and Abad, Francisco J and Garcia-Garzon, Eduardo and Golino, Hudson and Christensen, Alexander P and Garrido, Luis Eduardo},
-  journal={Psychological methods},
-  year={2023},
-  publisher={American Psychological Association}
 }
 
 @article{koike2023,
