--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -5,7 +5,6 @@ author:
   - name: Ana Neves
     orcid: 0009-0006-0020-7599
     roles:
-      - Project administration
       - Data curation
       - Formal Analysis
       - Investigation
@@ -55,27 +54,37 @@ author:
     #   - Validation
     #   - Visualization
     #   - Writing – original draft
-  # - name: Magdalena Pfaff
-  #   orcid: 0009-0006-2386-7936
-  #   affiliations:
-  #     - ref: "id1" 
-  # - name: Dominique Makowski
-  #   corresponding: true
-  #   orcid: 0000-0001-5375-9967
-  #   email: D.Makowski@sussex.ac.uk
-  #   url: https://realitybending.github.io/
-  #   roles:
-  #   affiliations:
-  #     - ref: "id1"
-  #     - name: "University of Sussex"
-  #       department:  "Sussex Centre for Consciousness Science"
+  - name: Magdalena Pfaff
+    orcid: 0009-0006-2386-7936
+    roles:
+      - Data curation
+      - Writing – original draft
+    affiliations:
+      - ref: "id1"
+  - name: Dominique Makowski
+    corresponding: true
+    orcid: 0000-0001-5375-9967
+    email: D.Makowski@sussex.ac.uk
+    url: https://realitybending.github.io/
+    roles:
+      - Project administration
+      - Data curation
+      - Formal Analysis
+      - Investigation
+      - Visualization
+      - Writing – original draft
+      - Writing – review & editing
+    affiliations:
+      - ref: "id1"
+      - name: "University of Sussex"
+        department:  "Sussex Centre for Consciousness Science"
 author-note:
   disclosures:
     gratitude: |
       ::: {.callout-note icon=false appearance="simple"}
-      :::
       This preprint is a non-peer-reviewed work from the [**Reality Bending Lab**](https://realitybending.github.io/).
       ![](https://realitybending.github.io/media/ReBeL_LogoOnly_hu11484441381606756729.png){width=20% fig-align="center"}
+      :::
 abstract: |
   Blabla the abstract blabla.
 keywords: [keyword1, keyword2, keyword3]
@@ -98,7 +107,7 @@ language:
 format:
   apaquarto-pdf:
     # Can be jou (journal), man (manuscript), stu (student), or doc (document)
-    documentmode: man
+    documentmode: jou
     include-in-header:
       - text: |
           \usepackage{lscape}
@@ -111,24 +120,28 @@ editor_options:
   chunk_output_type: console
 ---
 
+## Introduction 
+
 <!-- Interoception definition -->
 
 Interoception is referred to the process of sensing, interpreting and integrating information pertaining to internal organs, such as the heart, the lungs or the gut [@khalsa2018interoception].
 While recent research emphasizes a key role of interoception in a variety of processes (e.g., emotion regulation, decision making) and of outcomes (physical and psychological well being), the field remains clouded by concerns about how interoception is assessed.
 
+### The Interoceptive Assessment Puzzle
+
 <!-- Interoception measure -->
 
-Various measures of interoception have been developed (see @fig-measures), forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking *vs.* questionnaires and subjective scales involving a metacognitive reflection), "explicit" and "implicit" paradigms (i.e., directing participants' awareness and attention to interoceptive processes *vs.* measuring interoception unbeknownst to them), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., accuracy, sensitivity, awareness).
+Various measures of interoception have been developed (see @fig-measures), forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking *vs.* questionnaires and subjective scales involving metacognitive judgments), "explicit" and "implicit" paradigms (i.e., directing participants' awareness and attention to interoceptive processes *vs.* measuring interoception unbeknownst to them), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., accuracy, sensitivity, awareness).
 While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014; @Desmedt2023accuracy].
 
 ```{r}
 #| warning: false
 #| label: "fig-measures"
-#| apa-twocolumn: false  # A Figure Spanning Two Columns When in Journal Mode
+#| apa-twocolumn: true  # A Figure Spanning Two Columns When in Journal Mode
 #| out-width: "100%"
-#| fig-cap: "The different modalities of interoception (e.g., cardioception) can be assessed directly or indirectly. Direct assessments can further be subjective or objective, depending on whether they involve conscious metacognitive appraisals or more performance-based indices. Interoceptive tasks can be explicit (the participant is aware of the interoceptive nature of the task and must consciously attend to interoceptive signals; e.g., the heartbeat counting task) or implicit (measurements of interoception done unbeknowst to the participant; e.g., heartbeat evoked potentials measured during resting state). Indirect assessments evaluate constructs typically related (and ideally dependent on) to interoceptive processes or ability (or its deficit)."
+#| fig-cap: "The Interoceptive Assessment Puzzle. The different modalities of interoception (e.g., cardioception) can be assessed directly or indirectly. Direct assessments can further be subjective or objective, depending on whether they involve conscious metacognitive appraisals or more performance-based indices. Interoceptive tasks can be explicit (the participant is aware of the interoceptive nature of the task and must consciously attend to interoceptive signals; e.g., the heartbeat counting task) or implicit (measurements of interoception done unbeknowst to the participant; e.g., heartbeat evoked potentials measured during resting state). Indirect assessments evaluate constructs typically related (and ideally dependent on) to interoceptive processes or ability (or its deficit)."
 
-knitr::include_graphics("figures/MeasuringInteroception.jpg")
+knitr::include_graphics("figures/MeasuringInteroception.png")
 ```
 
 <!-- self-reports -->
@@ -136,58 +149,56 @@ knitr::include_graphics("figures/MeasuringInteroception.jpg")
 Although the use of subjective self-report questionnaires to measure deeply embodied functions might seem paradoxical at first, recent redefinitions of interoception emphasize the role of high-level and metacognitive elaboration of interoceptive information.
 These redefinitions provide theoretical grounding to support the idea that some facets of interoception, including participants' metacognitive beliefs, can be assessed subjectively [@khalsa2018interoception; @suksasilp2022towards].
 Moreover, the notion that self-reports might not reflect the same processes as other interoception tasks might be important to contextualize the apparent lack of convergence between measures in the field [@desmedt2022measures]. 
-For instance, existing findings typically show weak or no correlations between questionnaires and objective measures [including for measures of the same theoretical dimensions, e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023; @arslanova2022], such as the Heartbeat Counting Task [HCT, @schandry1981heart] and the Heartbeat Detection Task [HDT, @kleckner2015methodological]. 
-Additionally, objective measures assessing the same interoceptive dimension, such as accuracy, either show no correlation [e.g., @brand2023] or only weak correlations [e.g., @hickman2020relationship].
-Perhaps more surprisingly, low correlations have been observed even among questionnaires, suggesting the targeting of different facets related to interoception. 
+For instance, existing findings typically show weak or no correlations between questionnaires and objective measures, such as the Heartbeat Counting Task [HCT, @schandry1981heart] and the Heartbeat Detection Task [HDT, @kleckner2015methodological], including for measures of the same theoretical dimensions [e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023; @arslanova2022].
+Additionally, even various objective measures assessing in theory the same interoceptive dimension, such as accuracy, either show no or weak correlation [respectively, @brand2023; @hickman2020relationship].
+Perhaps more surprisingly, low correlations have been observed even among questionnaires, suggesting (in parallel to major validity concerns) the potential targeting of different facets related to interoception.
 
-<!-- 
-Garfinkel - sensibility-> Self-perceived dispositional tendency to be internally self-focused and interoceptively cognisant,
-Khalsa - sensibility -> Self-perceived tendency to focus on interoceptive stimuli (trait measure)
-Khalsa self-report scales -> The ability to reflect upon one’s autobiographical experiences of interoceptive states, make judgments about their outcomes, and describe them through verbal or motor responses. -->
 
 One striking example concerns the assessment of interoceptive sensibility, which is broadly defined as the self-reported tendency to focus on and detect internal sensations [@garfinkel2015knowing], but more narrowly as the subjective tendency to focus on interoceptive signals, without necessarily implying detection ability [@khalsa2018interoception].
-A recent systematic review suggested that various questionnaires designed to assess interoceptive sensibility may, in fact, measure distinct constructs, leading researchers to treat them as equivalent despite overall low convergence [@desmedt2022measures].
-
-Notably, this review adopted a broad definition of 'sensibility,' incorporating both interoceptive sensibility and interoceptive self-report scales, as described in @khalsa2018interoception's eight-facet model. 
-In this framework, self-report measures are categorized into interoceptive sensibility and interoceptive self-report scales (i.e., the ability to evaluate one's personal experiences of internal bodily states, assess their consequences, and articulate them through speech or movement).
+A recent systematic review suggested that various questionnaires designed to assess interoceptive sensibility may, in fact, measure distinct constructs, with the risk of researchers treating them as equivalent despite overall low convergence [@desmedt2022measures].
+Notably, this review adopted a broad definition of sensibility, incorporating both interoceptive sensibility and interoceptive self-report scales, following the eight-facet model by @khalsa2018interoception. 
+<!-- In this framework, self-report measures are categorized into interoceptive sensibility and interoceptive self-report scales (i.e., the ability to evaluate one's personal experiences of internal bodily states, assess their consequences, and articulate them through speech or movement). -->
 Several widely used questionnaires were included in the review, such as the Multidimensional Assessment of Interoceptive Awareness [MAIA, @mehling2012; MAIA-2, @mehling2018multidimensional], the Body Perception Questionnaire [BPQ, @porges1993body], the Private subscale of the Body Consciousness Questionnaire [PBCS, @miller1981consciousness], the Body Awareness Questionnaire [BAQ, @shields1989body], and the Eating Disorder Inventory [EDI, @garner1991eating; @garner1983].
 The lack of correlations to moderate correlations among these questionnaires highlight the need for greater conceptual clarity regarding what each measure captures, how they relate to different dimensions of interoception, and their potential overlaps with other constructs, such as alexithymia and body awareness.
 
+### The Interoceptive Accuracy Scale (IAS)
+
 <!-- Introducing the IAS -->
 
-A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS, @murphy2019].
+Focusing on another dimension of interoception, a recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS, @murphy2019].
 The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological modality such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (*"I can always accurately perceive when my heart is beating fast"*), skin (*"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (*"I can always accurately perceive when I am going to cough"*) or urinating (*"I can always accurately perceive when I need to urinate"*).
 Appealingly, the IAS' statements are about specific interoceptive behaviours, which is a distinct difference with other popular interoception questionnaires, such as the MAIA-2, which contains more general and metacognitive items (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*), as well as dimensions related to attention regulation (e.g., Not-distracting) or emotion regulation (e.g., Not-worrying).
 
 <!-- IAS structure  --> 
-Although the original validation study suggested a two-factor structure for the IAS: one reflecting the perception of general interoceptive signals (i.e., urinate, hungry, defecate, thirsty, pain, heart, taste, breathing, temperature, mulscles, affective touch, vomit, sexual arousal), and other relating to signals that may be difficult to perceive solely through interoceptive information (i.e., itch, tickle, cough, burp, bruise, blood sugar, sneeze, wind). 
+The original validation study suggested a two-factor structure for the IAS, one reflecting the perception of general interoceptive signals (urinate, hungry, defecate, thirsty, pain, heart, taste, breathing, temperature, muscles, affective touch, vomit, sexual arousal), and other relating to signals that may be difficult to perceive solely through interoceptive information (itch, tickle, cough, burp, bruise, blood sugar, sneeze, wind). 
 The authors however underlined its acceptable but imperfect fit [@murphy2019, p. 127], and several follow-up studies have indeed identified different optimal solutions. 
-For instance, @brand2023 reported a 1-factor solution, while @lin2023 - using a new approach to structure analysis, namely Exploratory Graph Analysis [EGA, @golino2017exploratory]- and @campos2021 found bifactor solutions, that is one general factor above a set of lower-level factors [@rodriguez2016evaluating],  to be the best fit. 
+For instance, @brand2023 reported a 1-factor solution, while @lin2023 - using Exploratory Graph Analysis [EGA, @golino2017exploratory] - and @campos2021 found bifactor solutions [i.e., one general factor above a set of lower-level factors, @rodriguez2016evaluating] to be the best fit. 
+Using a 2-factors Exploratory Factor Analysis (EFA), @koike2023 suggested that the items could be grouped into cutaneous (itching, tickling, coughing, burping, affective touch, bruising, passing gas, sneezing, muscle sensations, sexual arousal, and taste) and visceral sensations (urination, defecation, hunger, thirst, pain, breathing, fatigue/blood sugar, temperature, vomiting, and heartbeat).
 
 Discussions have also been focused on specific items.
 For instance, @murphy2019 notes that some items might measure direct interoceptive signals such as cardioception, while others might capture phenomena not perceivable through interoceptive signals alone (e.g., "bruising"; p. 119). 
-@lin2023 also highlights their correlation analysis, showing five locally dependent pairs and three items (touch, blood sugar, bruise) with exceptionally high difficulty and low discrimination, and @campos2021 reported "tickle" to be the only item that reflected more specific factors than the general factor.
+@lin2023 additionally highlights five locally dependent pairs and three items (touch, blood sugar, bruise) with exceptionally high difficulty and low discrimination, and @campos2021 reported "tickle" to be the only item that reflected more specific factors than the general factor. Furthermore, localization issues also arose, with both "itch" and "tickle" corresponding to the same Chinese character, leading to their collapse into a single item [@lin2023]. 
 
-Localization issues also arose in @lin2023 validation of the IAS, where both "itch" and "tickle" correspond to the same Chinese character, leading to their collapse into a single item. 
-Notably, the only other study to report a 2-factor solution was conducted by @koike2023, who performed an Exploratory Factor Analysis (EFA) assuming 2 factors to align with the findings from the original validation paper. 
-According to the authors, the first factor appears to reflect cutaneous sensations (i.e., itching, tickling, coughing, burping, affective touch, bruising, passing gas, sneezing, muscle sensations, sexual arousal, and taste), while the second factor seems to represent visceral sensations (i.e., urination, defecation, hunger, thirst, pain, breathing, fatigue/blood sugar, temperature, vomiting, and heartbeat).
+
 
 <!-- Relationship with other interoception measures -->
 
-Regarding its validity, the IAS has naturally been compared to other interoception-related measures, and shows a positive correlations with most facets of the MAIA [@mehling2018multidimensional], except for the Not-Distracting and Not-Worrying subscales [@brand2023] - which were highlighted previously as related to non-interoceptive abilities [@ferentzi2021examining].
+Regarding its validity, the IAS has naturally been compared to other interoception-related measures, and shows a positive correlations with most facets of the MAIA [@mehling2018multidimensional], except for the Not-Distracting and Not-Worrying subscales [@brand2023] - which were previously highlighted as related to non-interoceptive abilities [@ferentzi2021examining].
 Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ (i.e., BPQ-A) have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019].
 Small positive correlations have also been observed with the "observation" and "description" subscales of the Five Facet Mindfulness Questionnaire [FFMQ, @baer2006using; @brand2023; @koike2023], as well as with the "non-reactivity" and "acting with awareness" subscales [@koike2023].
-Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the EDI [@lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia], as reported by @brand2023 and @murphy2019.
-Lastly, no correlations have also been reported with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations], though studies have also found small positive correlation between these measures [@lin2023; @koike2023].
+Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the EDI **Write full name** [EDI, @lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia], as reported by @brand2023 and @murphy2019.
+Lastly, the correlation with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations] **is that the ref for the scale validation?** appears rather small [@lin2023; @koike2023].
 
 <!-- Convergent validity (correlates)  -->
 
 While assessing the predictive validity of an interoception scale can be conceived as theoretically challenging, expected negative associations were observed between the IAS and alexithymia [@brand2023; @koike2023; @campos2021; @murphy2019; @lin2023], somatic symptoms [@brand2023; @koike2023; @lin2023], depressive symptoms [@brand2023; @koike2023; @lin2023], anxiety [@brand2023], neuroticism [@brand2023] and self-esteem [@murphy2019].
+Taken together, these findings support the IAS as measuring an adaptive aspect of interoception, although its pattern of associations with other interoception (or interoception-related) questionnaires points towards some overlap across various theoretical dimensions, casting some doubt on the orthogonal models of interoception and the possibility of its faithful capture by questionnaires.
+
 
 <!-- current study -->
 
 The current study aims at 1) clarifying the structure of the IAS with a mega-analytic (which involves a re-analysis at the raw data level by aggregating datasets) approach that leverages existing data and contrast the traditional CFA/SEM factor-based analyses with network-based ones (Exploratory Graph Analysis);
-2) the second part will provide an overview of the dispositional correlates of the IAS, clarifying the pattern of associations which is key to better understand the nature, place and role of interoception questionnaires within a larger context.
+2) provide an overview of the dispositional correlates of the IAS, clarifying its general pattern of associations, which is key to better understand the nature, place and role of interoception questionnaires within a larger context.
 
 ## Study 1
 
